src/test/ui/inference/cannot-infer-partial-try-return.stderr
error[E0282]: type annotations needed for the closure `fn() -> Result<(), QualifiedError<_>>`
  --> $DIR/cannot-infer-partial-try-return.rs:19:9
   |
LL |         infallible()?;
   |         ^^^^^^^^^^^^^ cannot infer type
   |
help: give this closure an explicit return type without `_` placeholders
   |
LL |     let x = || -> Result<(), QualifiedError<_>> {
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
